# asmjit

./: .appveyor.yml  .gitignore  .travis.yml  BREAKING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CxxProject.cmake  Doxyfile  LICENSE.md  README.md  asmjit-config.cmake.in  asmjit-use.cmake  asmjit.natvis  configure_vs2022_x64.bat  configure_vs2022_x86.bat  configure_vs2026_x64.bat  configure_vs2026_x86.bat  cxxconfig.js
.github/: FUNDING.yml  problem-matcher.json
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_help_question.yml  99_other_issues.yml
.github/workflows/: build-config.json  build.yml  run-step.py
asmjit/: a32.h  core.h
asmjit-testing/bench/: asmjit_bench_codegen.cpp  asmjit_bench_codegen_a32.cpp  asmjit_bench_overhead.cpp
asmjit-testing/tests/: asmjit_test_assembler.cpp  asmjit_test_assembler.h  asmjit_test_assembler_a32.cpp  asmjit_test_assembler_a64.cpp  asmjit_test_assembler_a64_veneers.cpp  asmjit_test_assembler_x64.cpp  asmjit_test_assembler_x86.cpp  asmjit_test_compiler_a64.cpp  asmjit_test_compiler_x86.cpp  asmjit_test_perf_a32.cpp
asmjit/arm/: a32archtraits_p.h  a32assembler.cpp  a32assembler.h  a32builder.cpp  a32builder.h  a32emithelper.cpp  a32emithelper_p.h  a32emitter.h  a32formatter.cpp  a32formatter_p.h  a32globals.h  a32instapi.cpp  a32instapi_p.h  a32instdb.cpp  a32instdb_p.h  a32operand.h  a64assembler.cpp  a64compiler.h  a64emithelper.cpp  a64emithelper_p.h  a64rapass.cpp  a64rapass_p.h  armformatter.cpp
asmjit/core/: api-config.h  archcommons.h  archtraits.cpp  assembler.cpp  codeholder.cpp  codeholder.h  emitter.cpp  emitter.h  emitterutils_p.h  formatter.cpp  inst.cpp  rapass.cpp  rapass_p.h  virtmem.cpp
asmjit/ujit/: unicompiler.h
asmjit/x86/: x86assembler.cpp  x86compiler.cpp  x86compiler.h  x86emithelper.cpp  x86emithelper_p.h  x86instdb.cpp  x86operand.cpp  x86operand.h  x86rapass.cpp  x86rapass_p.h
db/: README.md  a64data.json  aarch32.js  aarch64.js  arm.js  armdata.js  base.js  exp.js  index.js  isa_aarch64.json  isa_arm.json  isa_x86.json  loongarch.json  package.json  riscv.js  riscvdata.js  x86.js  x86data.js
src/: asmjit.natvis
src/app/test/: asmjit_bench_x86.cpp  asmjit_test_opcode.cpp  asmjit_test_x86.cpp  benchx86.cpp  genblend.h  genopcode.h  testcpu.cpp  testdummy.cpp  testmem.cpp  testopcode.cpp  testpool.cpp  testsizeof.cpp  testx86.cpp
src/asmjit/: a32.h  a64.h  apibegin.h  apiend.h  arm.h  asmjit.h  asmjit_apibegin.h  asmjit_apiend.h  asmjit_build.h  base.h  build.h  config.h  core.h  host.h  loongarch.h  riscv.h  ujit.h  x86.h
src/asmjit/arm/: a32assembler.cpp  a32assembler.h  a32builder.cpp  a32builder.h  a32emithelper.cpp  a32emitter.h  a32formatter.cpp  a32formatter_p.h  a32globals.h  a32instapi.cpp  a32instapi_p.h  a32instdb.cpp  a32instdb_p.h  a32operand.h  a64archtraits_p.h  a64assembler.cpp  a64assembler.h  a64builder.cpp  a64builder.h  a64compiler.cpp  a64compiler.h  a64emithelper.cpp  a64emithelper_p.h  a64emitter.h  a64formatter.cpp  a64formatter_p.h  a64func.cpp  a64func_p.h  a64globals.h  a64instapi.cpp  a64instapi_p.h  a64instdb.cpp  a64instdb.h  a64instdb_p.h  a64operand.cpp  a64operand.h  a64rapass.cpp  a64rapass_p.h  a64utils.h  armarchtraits_p.h  (+21 more)
src/asmjit/base/: apibegin.h  apiend.h  arch.cpp  arch.h  assembler.cpp  assembler.h  assert.cpp  assert.h  codebuilder.cpp  codebuilder.h  codecompiler.cpp  codecompiler.h  codeemitter.cpp  codeemitter.h  codegen.cpp  codegen.h  codeholder.cpp  codeholder.h  compiler.cpp  compiler.h  compilercontext.cpp  compilercontext_p.h  compilerfunc.h  constpool.cpp  constpool.h  containers.cpp  containers.h  context.cpp  context_p.h  cpu.cpp  cpu.h  cpuinfo.cpp  cpuinfo.h  cputicks.cpp  cputicks.h  defs.cpp  defs.h  error.cpp  error.h  func.cpp  (+39 more)
src/asmjit/contrib/: winremoteruntime.cpp  winremoteruntime.h
src/test/: asmjit_bench_x86.cpp  asmjit_test_opcode.cpp  asmjit_test_opcode.h  asmjit_test_unit.cpp  asmjit_test_x86.cpp  broken.h  genblend.h
test/: asmjit.h  asmjit_bench_codegen.cpp  asmjit_bench_codegen.h  asmjit_bench_codegen_a64.cpp  asmjit_bench_codegen_x86.cpp  asmjit_bench_overhead.cpp  asmjit_bench_regalloc.cpp  asmjit_bench_x86.cpp  asmjit_environment_info.cpp  asmjit_test_a64_emitters.cpp  asmjit_test_assembler.cpp  asmjit_test_assembler.h  asmjit_test_assembler_a32.cpp  asmjit_test_assembler_a64.cpp  asmjit_test_assembler_la64.cpp  asmjit_test_assembler_riscv64.cpp  asmjit_test_assembler_x64.cpp  asmjit_test_assembler_x86.cpp  asmjit_test_compiler.cpp  asmjit_test_compiler.h  asmjit_test_compiler_a64.cpp  asmjit_test_compiler_x86.cpp  asmjit_test_emitters.cpp  asmjit_test_emitters_a64.cpp  asmjit_test_environment.cpp  asmjit_test_execute.cpp  asmjit_test_instinfo.cpp  asmjit_test_misc.h  asmjit_test_opcode.cpp  asmjit_test_opcode.h  asmjit_test_perf.cpp  asmjit_test_perf.h  asmjit_test_perf_a32.cpp  asmjit_test_perf_a64.cpp  asmjit_test_perf_x86.cpp  asmjit_test_random.h  asmjit_test_stress_x86.cpp  asmjit_test_stress_x86_data.h  asmjit_test_stress_x86_impl.h  asmjit_test_unicompiler.cpp  (+11 more)
testing/tests/: asmjit_test_unicompiler.cpp
tools/: Doxyfile  autoexp-patch.py  ci-run.sh  configure-mac-xcode.sh  configure-makefiles-dbg.sh  configure-makefiles-rel.sh  configure-makefiles.sh  configure-mingw-dbg.bat  configure-mingw-rel.bat  configure-ninja-dbg.sh  configure-ninja-rel.sh  configure-ninja.sh  configure-sanitizers.sh  configure-unix-makefiles-dbg.sh  configure-unix-makefiles-rel.sh  configure-vs2017-x64.bat  configure-vs2017-x86.bat  configure-vs2019-x64.bat  configure-vs2019-x86.bat  configure-win-mingw-dbg.bat  configure-win-mingw-rel.bat  configure-win-vs2005-x64.bat  configure-win-vs2005-x86.bat  configure-win-vs2008-x64.bat  configure-win-vs2008-x86.bat  configure-win-vs2010-x64.bat  configure-win-vs2010-x86.bat  configure-win-vs2013-x64.bat  configure-win-vs2013-x86.bat  configure-win-vs2015-x64.bat  configure-win-vs2015-x86.bat  configure-xcode.sh  doc-footer.html  doc-header.html  doc-layout.xml  doc-style.css  doxygen.conf  doxygen.css  gencommons.js  gencxx.js  (+18 more)
(+242 files in other folders)
